# kidney_project

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
data/NHIS_CSV/adult21csv/: readme.txt
data/NHIS_CSV/adult23csv/: readme.txt
data/NHIS_CSV/adult24csv/: readme.txt
data/nhanes_data/: analysis.ipynb
src/kidney/: config.py  pipeline.py
src/kidney/analysis/: donors.py  eligibility.py  ipf_reconciliation.py  ipf_reconciliation_report.py  manuscript.py  national_reconciliation.py  nhanes.py  prevalence.py  reconciliation_report.py  stratified.py  trends.py
src/kidney/data/: loader.py  preprocessing.py
src/kidney/visualization/: comparison.py  diagrams.py  style.py  trends.py
