[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kidney"
version = "1.0.0"
description = "NHIS/NHANES kidney donation eligibility analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "matplotlib-venn>=1.1",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "pyreadstat>=1.2",
]

[project.scripts]
kidney-analysis = "kidney.pipeline:main"
kidney-manuscript = "kidney.analysis.manuscript:main"
